assets/css/common.css
:root {
    --bg-primary: #0f172a;
    --bg-secondary: #1a2f77;
    --text-primary: #8789c3;
    --text-secondary: #ffcc5b;
    --text-tertiary: #3b82f6;
  }
  html , * {
    margin: 0;
    padding: 0;
  }
  a,
  span,
  a:hover,
  a:active,
  button {
    text-decoration: none;
  }
  a,
  div a:hover,
  div a:active,
  div a:focus,
  button {
    text-decoration: none;
    -webkit-transition: all 0.5s ease 0s;
    -moz-transition: all 0.5s ease 0s;
    -ms-transition: all 0.5s ease 0s;
    -o-transition: all 0.5s ease 0s;
    transition: all 0.5s ease 0s;
  }
  p {
    margin: 0;
  }
  body {
    margin: 0;
  }
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    margin: 0px;
    padding: 0px;
    font-family: "Roboto", sans-serif; /* Updated font family */
    font-weight: 600;
  }
  p {
    font-family: "Roboto", sans-serif; /* Updated font family */
    font-size: 16px;
  }
  ul,
  a {
    list-style: none;
    margin: 0;
  }
  img {
    max-width: 100%;
  }
  .cm-overflow {
    overflow: hidden;
  }
  ol,
  ul {
    padding-left: 0px;
  }
  .hidden {
    display: none !important;
  }
  
  body {
    margin: 0;
    font-family: "Roboto", sans-serif; /* Updated font family */
    background-color: var(--bg-primary);
    color: #fff;
  }
  a {
    text-decoration: none; /* Remove underline */
    color: inherit; /* Inherit color from parent element */
}


.header_ads {
  padding-top: 45px !important;
  display: flex;
  justify-content: center;
}
.header_space{
  padding: 10px 0 10px 0;
  text-align: center;
}

#div-gpt-ad-1738058472013-0{
  display: flex;
  align-items:center ;
}

